コマンド関連を実装、うまくいかずあとはよろしく

--- a/source/HashChecker.csproj
+++ b/source/HashChecker.csproj
@@ -154,9 +154,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Command\ChangedMaxWindowSize.cs" />
     <Compile Include="Model\FileData.cs" />
     <Compile Include="Model\MergeData.cs" />
-    <Compile Include="ViewModel\GridData.cs" />
+    <Compile Include="ViewModel\BindingGridData.cs" />
+    <Page Include="Command\Command.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -165,6 +170,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="View\BindingData.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
