--- a/source/packages.config
+++ b/source/packages.config
@@ -8,4 +8,5 @@
   <package id="Prism.Unity" version="6.3.0" targetFramework="net462" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net462" />
   <package id="Unity" version="4.0.1" targetFramework="net462" />
+  <package id="WindowsAPICodePack" version="1.1.0" targetFramework="net462" />
 </packages>
