ステータスバー関連の追加など

--- a/source/HashChecker.csproj
+++ b/source/HashChecker.csproj
@@ -117,15 +117,22 @@
     <Compile Include="Common\NavigationHelper.cs" />
     <Compile Include="Common\ShowModalWindowAction.cs" />
     <Compile Include="Common\WindowCloseAction.cs" />
+    <Compile Include="Contexts\StatusBar.cs" />
     <Compile Include="Controls\BasePanel.cs" />
     <Compile Include="Enums\CheckErrorType.cs" />
     <Compile Include="Enums\Regions.cs" />
     <Compile Include="Events\FolderOpenEvent.cs" />
     <Compile Include="Events\FolderOpenValue.cs" />
+    <Compile Include="Events\StatusBarMessageChangeEvent.cs" />
+    <Compile Include="Events\StatusBarMessageChangeValue.cs" />
     <Compile Include="HashCheckerModule.cs" />
     <Compile Include="Interfaces\IFolderOpenProvider.cs" />
     <Compile Include="Interfaces\IFolderOpenPublisher.cs" />
     <Compile Include="Interfaces\IFolderOpenValue.cs" />
+    <Compile Include="Interfaces\IMessageProvider.cs" />
+    <Compile Include="Interfaces\IMessagePublisher.cs" />
+    <Compile Include="Interfaces\IProgressBarValue.cs" />
+    <Compile Include="Interfaces\IMessageValue.cs" />
     <Compile Include="Models\FileData.cs" />
     <Compile Include="Models\MergeData.cs" />
     <Compile Include="Models\BindingGridData.cs" />
