--- a/source/HashChecker.csproj
+++ b/source/HashChecker.csproj
@@ -157,6 +157,12 @@
     <Compile Include="Views\MenuOpenView.xaml.cs">
       <DependentUpon>MenuOpenView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ResultPageView.xaml.cs">
+      <DependentUpon>ResultPageView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ResultWindow.xaml.cs">
+      <DependentUpon>ResultWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Shell.xaml.cs">
       <DependentUpon>Shell.xaml</DependentUpon>
     </Compile>
@@ -193,6 +199,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\MenuOpenView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ResultPageView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ResultWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
