--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,14 @@ Session.vim
 *.exe
 *.out
 *.app
+
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
